fix: 환경파일 ignore 및 타입 설정

--- a/apps/user/tsconfig.json
+++ b/apps/user/tsconfig.json
@@ -11,7 +11,8 @@
       "@/*": ["./*"],
       "@components/*": ["./components/*"],
       "@app/*": ["./app/*"]
-    }
+    },
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
   "include": [
     "**/*.ts",
