--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,16 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+**/.env*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+apps/*/.env
+apps/*/.env.*
+packages/*/.env
+packages/*/.env.*
 
 # turbo
 .turbo
