feat: 캐러샐로 구현 하는 중

--- a/apps/user/tsconfig.json
+++ b/apps/user/tsconfig.json
@@ -10,7 +10,8 @@
     "paths": {
       "@/*": ["./*"],
       "@components/*": ["./components/*"],
-      "@app/*": ["./app/*"]
+      "@app/*": ["./app/*"],
+      "@repo/ui/*": ["../../packages/ui/src/*"] 
     },
     "typeRoots": ["./types", "./node_modules/@types"]
   },
