--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,6 +31,12 @@
     "@types/react": "^19.1.0",
     "eslint": "^9.27.0",
     "tailwindcss": "^4.1.5",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0"
   }
 }
