--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.5",
     "tailwindcss-animate": "^1.0.7"
