--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,8 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
+
+  "globalEnv": ["BASE_URL", "BASE_API_URL", "NEXTAUTH_SECRET"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
