fix: background components change wrapper

--- a/turbo.json
+++ b/turbo.json
@@ -22,6 +22,10 @@
     "test": {
       "dependsOn": ["^test"],
       "outputs": []
+    },
+    "start": {
+      "dependsOn": ["^start"],
+      "outputs": []
     }
   }
 }
