--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev --port 3002 --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 3002",
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit"
   },
