--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
 
-  "globalEnv": ["BASE_URL", "BASE_API_URL", "NEXTAUTH_SECRET", "AWS_REGION", "AWS_ACCESS_KEY_ID", "AWS_SECRET_ACCESS_KEY", "AWS_S3_BUCKET_NAME", "ANALYZE"],
+  "globalEnv": ["BASE_URL", "BASE_API_URL", "NEXTAUTH_SECRET", "AWS_REGION", "AWS_ACCESS_KEY_ID", "AWS_SECRET_ACCESS_KEY", "AWS_S3_BUCKET_NAME", "ANALYZE", "NEXTAUTH_URL"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
