--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,12 @@
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
 
-  "globalEnv": ["BASE_URL", "BASE_API_URL", "NEXTAUTH_SECRET", "AWS_REGION", "AWS_ACCESS_KEY_ID", "AWS_SECRET_ACCESS_KEY", "AWS_S3_BUCKET_NAME", "ANALYZE", "NEXTAUTH_URL"],
+  "globalEnv": [
+    "BASE_URL", "BASE_API_URL",
+    "NEXTAUTH_SECRET","NEXTAUTH_URL",
+    "AWS_REGION", "AWS_ACCESS_KEY_ID", "AWS_SECRET_ACCESS_KEY", "AWS_S3_BUCKET_NAME",
+    "ANALYZE","NODE_ENV"
+  ],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
