--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@repo/ui": "workspace:*",
     "@tanstack/react-query": "^5.80.7",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.16.0",
     "next": "^15.3.0",
     "next-auth": "^4.24.11",
