feat: mainheader publishing

--- a/apps/busker/tsconfig.json
+++ b/apps/busker/tsconfig.json
@@ -5,7 +5,15 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"],
+      "@components/*": ["./components/*"],
+      "@app/*": ["./app/*"],
+      "@repo/ui/*": ["../../packages/ui/src/*"] 
+    },
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
   "include": [
     "**/*.ts",
