--- a/turbo.json
+++ b/turbo.json
@@ -3,10 +3,16 @@
   "ui": "tui",
 
   "globalEnv": [
-    "BASE_URL", "BASE_API_URL",
-    "NEXTAUTH_SECRET","NEXTAUTH_URL",
-    "AWS_REGION", "AWS_ACCESS_KEY_ID", "AWS_SECRET_ACCESS_KEY", "AWS_S3_BUCKET_NAME",
-    "ANALYZE","NODE_ENV"
+    "BASE_URL",
+    "BASE_API_URL",
+    "NEXTAUTH_SECRET",
+    "NEXTAUTH_URL",
+    "AWS_REGION",
+    "AWS_ACCESS_KEY_ID",
+    "AWS_SECRET_ACCESS_KEY",
+    "AWS_S3_BUCKET_NAME",
+    "ANALYZE",
+    "NODE_ENV"
   ],
   "tasks": {
     "build": {
