--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "graph": "turbo run build lint check-types --graph=graph.png",
     "check-before-commit": "turbo run lint check-types --filter=...[origin/dev]",
-    "check-before-push": "turbo run build --filter=...[origin/dev]"
+    "check-before-push": "turbo run build --filter=...[origin/dev]",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
