--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "turbo": "^2.5.3"
+    "turbo": "2.5.3"
   },
   "packageManager": "pnpm@8.15.6",
   "engines": {
