--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -14,9 +14,11 @@
     "@repo/ui": "workspace:*",
     "@tanstack/react-query": "^5.80.7",
     "dayjs": "^1.11.13",
+    "firebase": "^11.9.1",
     "framer-motion": "^12.16.0",
     "next": "^15.3.0",
     "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
