--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,16 @@ apps/*/.env.*
 packages/*/.env
 packages/*/.env.*
 
+# PWA
+**/public/sw.js
+**/public/sw.js.map
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/worker-*.js.map
+**/public/workbox-*.js.map
+**/public/workbox-*.js.LICENSE.txt
+
 # turbo
 .turbo
 
