--- a/apps/busker/.gitignore
+++ b/apps/busker/.gitignore
@@ -32,3 +32,13 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# PWA
+**/public/sw.js
+**/public/sw.js.map
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/worker-*.js.map
+**/public/workbox-*.js.map
+**/public/workbox-*.js.LICENSE.txt
