--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -14,6 +14,7 @@
     "@repo/ui": "workspace:*",
     "@tanstack/react-query": "^5.80.7",
     "dayjs": "^1.11.13",
+    "@stomp/stompjs": "^7.1.1",
     "firebase": "^11.9.1",
     "framer-motion": "^12.16.0",
     "next": "^15.3.0",
