fix: chat api 안됨

--- a/apps/busker/package.json
+++ b/apps/busker/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
-    "@stomp/stompjs": "^7.1.1",
+    "@stomp/stompjs": "7.1.1",
     "@tanstack/react-query": "^5.80.7",
     "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
