--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000 --turbopack",
+    "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start --port 3000",
     "lint": "next lint --max-warnings 0",
@@ -14,6 +14,7 @@
     "@repo/ui": "workspace:*",
     "@stomp/stompjs": "^7.1.1",
     "@tanstack/react-query": "^5.80.7",
+    "@tosspayments/payment-sdk": "^1.9.1",
     "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
     "framer-motion": "^12.16.0",
@@ -22,7 +23,8 @@
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.821.0",
