fix: 청크 최적화

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "graph": "turbo run build lint check-types --graph=graph.png",
     "check-before-commit": "turbo run lint check-types --filter=...[origin/dev]",
-    "check-before-push": "ANALYZE=true turbo run build --filter=...[origin/dev]",
+    "check-before-push": "turbo run build --filter=...[origin/dev]",
     "prepare": "husky install"
   },
   "devDependencies": {
