--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,9 @@ jobs:
           echo "NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID}}" >> ./apps/user/.env.production
           echo "NEXT_PUBLIC_FIREBASE_VAPID_KEY=${{ secrets.NEXT_PUBLIC_FIREBASE_VAPID_KEY}}" >> ./apps/user/.env.production
 
+          echo "NEXT_PUBLIC_BASE_API_URL=${{NEXT_PUBLIC_BASE_API_URL}}" >> ./apps/user/.env.production
+          echo "NEXT_PUBLIC_WEBSOCKET_DOMAIN=${{NEXT_PUBLIC_WEBSOCKET_DOMAIN}}" >> ./apps/user/.env.production
+
           echo "NEXT_PUBLIC_FIREBASE_API_KEY=${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}" >> ./apps/busker/.env.production
           echo "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=${{ secrets.NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN }}" >> ./apps/busker/.env.production
           echo "NEXT_PUBLIC_FIREBASE_PROJECT_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECT_ID}}" >> ./apps/busker/.env.production
@@ -44,6 +47,9 @@ jobs:
           echo "NEXT_PUBLIC_FIREBASE_APP_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID}}" >> ./apps/busker/.env.production
           echo "NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID}}" >> ./apps/busker/.env.production
           echo "NEXT_PUBLIC_FIREBASE_VAPID_KEY=${{ secrets.NEXT_PUBLIC_FIREBASE_VAPID_KEY}}" >> ./apps/busker/.env.production
+
+          echo "NEXT_PUBLIC_BASE_API_URL=${{NEXT_PUBLIC_BASE_API_URL}}" >> ./apps/busker/.env.production
+          echo "NEXT_PUBLIC_WEBSOCKET_DOMAIN=${{NEXT_PUBLIC_WEBSOCKET_DOMAIN}}" >> ./apps/busker/.env.production
 
           docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/front-service:${{ github.sha }} .
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/front-service:${{ github.sha }}
@@ -82,6 +88,9 @@ jobs:
             echo "NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID }}" >> .env.user
             echo "NEXT_PUBLIC_FIREBASE_VAPID_KEY=${{ secrets.NEXT_PUBLIC_FIREBASE_VAPID_KEY }}" >> .env.user
 
+            echo "NEXT_PUBLIC_BASE_API_URL=${{NEXT_PUBLIC_BASE_API_URL}}" >> .env.user
+            echo "NEXT_PUBLIC_WEBSOCKET_DOMAIN=${{NEXT_PUBLIC_WEBSOCKET_DOMAIN}}" >> .env.user
+
             echo "[2] .env.busker 생성"
             echo "NEXTAUTH_URL=${{ secrets.BUSKER_NEXTAUTH_URL }}" > .env.busker
             echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> .env.busker
@@ -100,6 +109,9 @@ jobs:
             echo "NEXT_PUBLIC_FIREBASE_APP_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}" >> .env.busker
             echo "NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID }}" >> .env.busker
             echo "NEXT_PUBLIC_FIREBASE_VAPID_KEY=${{ secrets.NEXT_PUBLIC_FIREBASE_VAPID_KEY }}" >> .env.busker
+
+            echo "NEXT_PUBLIC_BASE_API_URL=${{NEXT_PUBLIC_BASE_API_URL}}" >> .env.busker
+            echo "NEXT_PUBLIC_WEBSOCKET_DOMAIN=${{NEXT_PUBLIC_WEBSOCKET_DOMAIN}}" >> .env.busker
 
             echo "[3] 컨테이너 정리"
             docker-compose down
